# pocketmg

./: .gitignore  CMakeLists.txt  CMakeTools.txt  pocketmanga.app  pocketmanga.sln  uncrustify.cfg
p7zip/CPP/7zip/CMAKE/buildololo/: CMakeCache.txt
pocketmanga/: .cproject  .project  Makefile  ReadMe.txt  pocketmanga.cpp  pocketmanga.mk  pocketmanga.vcproj  pocketmanga.vcxproj  pocketmanga_win32.cpp
pocketmanga/pocket/: booklist.cpp  booklist.h  config.cpp  config.h  directoryselect.cpp  directoryselect.h  pictureview.cpp  pictureview.h
pocketmanga/src/: algorithms_ex.h  bmpDecoder.cpp  book.cpp  book.h  byteArray.cpp  byteArray.h  cacheScaler.cpp  cacheScaler.h  color.cpp  color.h  debugUtils.h  defines.cpp  defines.h  factory.h  filemanager.cpp  filemanager.h  filemanager_linux.cpp  filemanager_win32.cpp  filepath.cpp  filepath.h  forbid_copy_assign.h  iArchive.cpp  iArchive.h  image.cpp  image.h  imgDecoder.cpp  imgDecoder.h  imgDecoderFactory.cpp  imgDecoderFactory.h  ioapi.h  jpegDecoder.cpp  pngDecoder.cpp  primitives.cpp  primitives.h  rotate.cpp  rotate.h  scale.cpp  scale.h  singleton.h  static_assert.h  (+3 more)
pocketmanga/src/win32/: scoped_handle.h
res/: res2code.py
src/: ReadMe.txt  pocketmanga.mk  pocketmanga.vcproj
src/7z_static/: CMakeLists.txt
src/app/: CMakeLists.txt  pocketmanga.cpp  pocketmanga_linux.cpp  pocketmanga_win32.cpp
src/common/: CMakeLists.txt  algorithms_ex.h  bmpDecoder.cpp  book.cpp  book.h  byteArray.h  color.h  debugUtils.h  factory.h  filemanager.cpp  filemanager_win32.cpp  filepath.cpp  iArchive.cpp  iArchive.h  image.cpp  image.h  imgDecoder.h  imgDecoderFactory.cpp  imgDecoderFactory.h  mirror.cpp  mirror.h  pngDecoder.cpp  singleton.h  static_assert.h  test_support.h  unzip.h  zipArchive.h
src/common/archives/: 7zArchive.cpp  7zArchive.h  zipArchive.cpp  zipArchive.h
src/common/decoders/: bmpDecoder.cpp  decodeMode.h  decoderCommon.h  imgDecoder.cpp  imgDecoder.h  imgDecoderFactory.cpp  imgDecoderFactory.h  jpegDecoder.cpp  pngDecoder.cpp
src/pocket/: booklist.cpp  config.cpp  config.h  pictureview.cpp  pictureview.h
test/: CMakeLists.txt  clone.h  convert_resources.bat  globalTest.cpp  globalTest.h  report.cpp  report.h  singleton.h  smartDelete.h  tesRect.cpp  test.vcproj  test.vcxproj  testArchive.cpp  testArchive.h  testArchiver.cpp  testBenchmark.cpp  testBenchmark.h  testBmp.cpp  testBook.cpp  testColor.cpp  testFileList.cpp  testFilePath.cpp  testFileSystem.cpp  testFileSystem.h  testFormatter.cpp  testFormatter.h  testImageDecoder.cpp  testImageDecoder.h  testJpg_jpg.h  testName.h  testRotate.cpp  testScale.cpp  testUtils.cpp  testUtils.h  timeInfo.h
test/test_data/archives/: archive.7z  archive.rar  archive.tar.bz2
