TOOLS_BEGIN_PROJECT(seven_zip LIBRARY)

TOOLS_SOURCES(
    "${SEVEN_ZIP_STATIC}/C/7zCrc.c"
    "${SEVEN_ZIP_STATIC}/C/7zCrcOpt.c"
    "${SEVEN_ZIP_STATIC}/C/7zStream.c"
    "${SEVEN_ZIP_STATIC}/C/Aes.c"
    "${SEVEN_ZIP_STATIC}/C/Alloc.c"
    "${SEVEN_ZIP_STATIC}/C/Bcj2.c"
    "${SEVEN_ZIP_STATIC}/C/Bcj2Enc.c"
    "${SEVEN_ZIP_STATIC}/C/Blake2s.c"
    "${SEVEN_ZIP_STATIC}/C/Bra.c"
    "${SEVEN_ZIP_STATIC}/C/Bra86.c"
    "${SEVEN_ZIP_STATIC}/C/BraIA64.c"
    "${SEVEN_ZIP_STATIC}/C/BwtSort.c"
    "${SEVEN_ZIP_STATIC}/C/CpuArch.c"
    "${SEVEN_ZIP_STATIC}/C/Delta.c"
    "${SEVEN_ZIP_STATIC}/C/HuffEnc.c"
    "${SEVEN_ZIP_STATIC}/C/LzFind.c"
    "${SEVEN_ZIP_STATIC}/C/LzFindMt.c"
    "${SEVEN_ZIP_STATIC}/C/Lzma2Dec.c"
    "${SEVEN_ZIP_STATIC}/C/Lzma2Enc.c"
    "${SEVEN_ZIP_STATIC}/C/LzmaDec.c"
    "${SEVEN_ZIP_STATIC}/C/LzmaEnc.c"
    "${SEVEN_ZIP_STATIC}/C/MtCoder.c"
    "${SEVEN_ZIP_STATIC}/C/Ppmd7.c"
    "${SEVEN_ZIP_STATIC}/C/Ppmd7Dec.c"
    "${SEVEN_ZIP_STATIC}/C/Ppmd7Enc.c"
    "${SEVEN_ZIP_STATIC}/C/Ppmd8.c"
    "${SEVEN_ZIP_STATIC}/C/Ppmd8Dec.c"
    "${SEVEN_ZIP_STATIC}/C/Ppmd8Enc.c"
    "${SEVEN_ZIP_STATIC}/C/Sha1.c"
    "${SEVEN_ZIP_STATIC}/C/Sha256.c"
    "${SEVEN_ZIP_STATIC}/C/Sort.c"
    "${SEVEN_ZIP_STATIC}/C/Threads.c"
    "${SEVEN_ZIP_STATIC}/C/Xz.c"
    "${SEVEN_ZIP_STATIC}/C/XzCrc64.c"
    "${SEVEN_ZIP_STATIC}/C/XzCrc64Opt.c"
    "${SEVEN_ZIP_STATIC}/C/XzDec.c"
    "${SEVEN_ZIP_STATIC}/C/XzEnc.c"
    "${SEVEN_ZIP_STATIC}/C/XzIn.c"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/7z/7zCompressionMode.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/7z/7zDecode.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/7z/7zEncode.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/7z/7zExtract.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/7z/7zFolderInStream.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/7z/7zHandler.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/7z/7zHandlerOut.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/7z/7zHeader.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/7z/7zIn.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/7z/7zOut.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/7z/7zProperties.cpp"
#    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/7z/7zRegister.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/7z/7zSpecStream.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/7z/7zUpdate.cpp"
#    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/Bz2Handler.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/Cab/CabBlockInStream.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/Cab/CabHandler.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/Cab/CabHeader.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/Cab/CabIn.cpp"
#    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/Cab/CabRegister.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/Common/CoderMixer2.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/Common/DummyOutStream.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/Common/FindSignature.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/Common/HandlerOut.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/Common/InStreamWithCRC.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/Common/ItemNameUtils.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/Common/MultiStream.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/Common/OutStreamWithCRC.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/Common/ParseProperties.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/DeflateProps.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/HandlerCont.cpp"
#    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/GzHandler.cpp"
#    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/LzmaHandler.cpp"
#    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/PpmdHandler.cpp"
#    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/SplitHandler.cpp"

    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/Tar/TarHandler.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/Tar/TarHandlerOut.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/Tar/TarHeader.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/Tar/TarIn.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/Tar/TarOut.cpp"
#    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/Tar/TarRegister.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/Tar/TarUpdate.cpp"
#    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/XzHandler.cpp"
#    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/ZHandler.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/Zip/ZipAddCommon.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/Zip/ZipHandler.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/Zip/ZipHandlerOut.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/Zip/ZipIn.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/Zip/ZipItem.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/Zip/ZipOut.cpp"
#    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/Zip/ZipRegister.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Archive/Zip/ZipUpdate.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Common/CreateCoder.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Common/CWrappers.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Common/FilePathAutoRename.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Common/FileStreams.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Common/FilterCoder.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Common/InBuffer.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Common/InOutTempBuffer.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Common/LimitedStreams.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Common/MemBlocks.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Common/MethodId.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Common/MethodProps.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Common/OffsetStream.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Common/OutBuffer.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Common/OutMemStream.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Common/ProgressMt.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Common/ProgressUtils.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Common/PropId.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Common/StreamBinder.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Common/StreamObjects.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Common/StreamUtils.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Common/UniqBlocks.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Common/VirtThread.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Compress/Bcj2Coder.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Compress/Bcj2Register.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Compress/BcjCoder.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Compress/BcjRegister.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Compress/BitlDecoder.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Compress/BranchMisc.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Compress/BranchRegister.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Compress/ByteSwap.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Compress/BZip2Crc.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Compress/BZip2Decoder.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Compress/BZip2Encoder.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Compress/BZip2Register.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Compress/CopyCoder.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Compress/CopyRegister.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Compress/Deflate64Register.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Compress/DeflateDecoder.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Compress/DeflateEncoder.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Compress/DeflateRegister.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Compress/DeltaFilter.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Compress/ImplodeDecoder.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Compress/ImplodeHuffmanDecoder.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Compress/Lzma2Decoder.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Compress/Lzma2Encoder.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Compress/Lzma2Register.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Compress/LzmaDecoder.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Compress/LzmaEncoder.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Compress/LzmaRegister.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Compress/LzOutWindow.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Compress/LzxDecoder.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Compress/PpmdDecoder.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Compress/PpmdEncoder.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Compress/PpmdRegister.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Compress/PpmdZip.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Compress/QuantumDecoder.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Compress/ShrinkDecoder.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Compress/ZDecoder.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Crypto/7zAes.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Crypto/7zAesRegister.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Crypto/HmacSha1.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Crypto/HmacSha256.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Crypto/MyAes.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Crypto/MyAesReg.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Crypto/Pbkdf2HmacSha1.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Crypto/RandGen.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Crypto/Rar20Crypto.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Crypto/Rar5Aes.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Crypto/RarAes.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Crypto/WzAes.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Crypto/ZipCrypto.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/Crypto/ZipStrong.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/UI/Common/ArchiveCommandLine.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/UI/Common/ArchiveExtractCallback.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/UI/Common/ArchiveOpenCallback.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/UI/Common/Bench.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/UI/Common/DefaultName.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/UI/Common/EnumDirItems.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/UI/Common/Extract.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/UI/Common/ExtractingFilePath.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/UI/Common/HashCalc.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/UI/Common/LoadCodecs.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/UI/Common/OpenArchive.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/UI/Common/PropIDUtils.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/UI/Common/SetProperties.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/UI/Common/SortUtils.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/UI/Common/TempFiles.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/UI/Common/Update.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/UI/Common/UpdateAction.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/UI/Common/UpdateCallback.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/UI/Common/UpdatePair.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/7zip/UI/Common/UpdateProduce.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/Common/CommandLineParser.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/Common/CRC.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/Common/CrcReg.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/Common/IntToString.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/Common/ListFileUtils.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/Common/MyString.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/Common/MyVector.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/Common/MyWindows.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/Common/Sha1Reg.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/Common/Sha256Reg.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/Common/StdInStream.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/Common/StdOutStream.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/Common/StringConvert.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/Common/StringToInt.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/Common/UTFConvert.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/Common/Wildcard.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/Common/XzCrc64Reg.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/myWindows/myAddExeFlag.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/myWindows/mySplitCommandLine.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/myWindows/wine_date_and_time.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/Windows/ErrorMsg.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/Windows/FileDir.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/Windows/FileFind.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/Windows/FileIO.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/Windows/FileName.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/Windows/PropVariant.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/Windows/PropVariantConv.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/Windows/PropVariantUtils.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/Windows/Synchronization.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/Windows/System.cpp"
    "${SEVEN_ZIP_STATIC}/CPP/Windows/TimeUtils.cpp"
)


TOOLS_END_PROJECT()

#include_directories(
#  "../../../myWindows"
#  "../../../"
#  "../../../include_windows"
#)

# add_definitions( -DEXTERNAL_CODECS -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_REENTRANT -DENV_UNIX -DBREAK_HANDLER -DUNICODE -D_UNICODE -DUNIX_USE_WIN_FILE)


# find_library(DL_LIB dl)

# link_directories(${DL_LIB_PATH})

#IF(APPLE)
#   TARGET_LINK_LIBRARIES(7z_ ${COREFOUNDATION_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
#ELSE(APPLE)
#  IF(HAVE_PTHREADS)
#   TARGET_LINK_LIBRARIES(7z_ ${CMAKE_THREAD_LIBS_INIT} dl)
#  ENDIF(HAVE_PTHREADS)
#ENDIF(APPLE)

